--- a/index.html
+++ b/index.html
@@ -1,1 +1,52 @@
-<h1>Hello World!</h1>
+<!DOCTYPE html>
+
+<html>
+
+<head>
+  <title>Info about Kelvin Opoku</title>
+  <link rel="stylesheet" type="text/css" href='styles.css' />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
+
+</head>
+
+<body>
+<div class="wrapper">
+    <div class="container-one">
+        <img src="kelvin.jpg"  class="image" />
+        <div class="social-media">
+            <a class="contact-a" target="_blank" href="https://www.linkedin.com">
+                <i class="fab fa-linkedin contact-icon"></i>
+            </a>
+            <a class="contact-a" target="_blank" href="https://www.instagram.com">
+                <i class="fab fa-instagram contact-icon"></i>
+            </a>
+            <a class="contact-a" target="_blank" href="https://www.twitter.com">
+                <i class="fab fa-twitter contact-icon"></i>
+            </a>
+            <a class="contact-a" target="_blank" href="https://www.youtube.com">
+                <i class="fab fa-youtube contact-icon"></i>
+            </a>
+            <a class="contact-a" target="_blank" href="https://www.facebook.com">
+                <i class="fab fa-facebook-f contact-icon"></i>
+            </a>
+
+        </div>
+    </div>
+    <div class="container-two">
+        <div>
+            <h1>KELVIN OPOKU</h1>
+            <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras eget fringilla elit. Phasellus condimentum tincidunt risus. Pellentesque aliquet tellus eu lacus ultrices, ac vestibulum purus malesuada. Aenean interdum, lacus id rutrum hendrerit, lacus est finibus lorem, euismod tincidunt nunc lectus ut odio.
+                    Aliquam luctus augue sed urna convallis consectetur. Curabitur congue iaculis blandit. Vivamus eu facilisis turpis, eu iaculis lorem.
+                    Vivamus a lacinia tortor. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Etiam dapibus quis libero sit amet viverra. Suspendisse ultrices dictum dolor eu efficitur. Phasellus mauris libero, lacinia in tortor non, viverra venenatis mauris.
+                    Nulla facilisi. Suspendisse non neque malesuada, mattis elit nec, tempor nunc.
+            </p>
+            <button class="button"> 
+                CONTACT ME
+            </button>
+        </div>
+    </div>
+</div>
+</body>
+
+</html>
