--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-  <title>Info about Kelvin Opoku</title>
+  <title>KELVIN OPOKU</title>
   <link rel="stylesheet" type="text/css" href='styles.css' />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
 
@@ -12,34 +12,15 @@
 <body>
 <div class="wrapper">
     <div class="container-one">
-        <img src="kelvin.jpg"  class="image" />
-        <div class="social-media">
-            <a class="contact-a" target="_blank" href="https://www.linkedin.com">
-                <i class="fab fa-linkedin contact-icon"></i>
-            </a>
-            <a class="contact-a" target="_blank" href="https://www.instagram.com">
-                <i class="fab fa-instagram contact-icon"></i>
-            </a>
-            <a class="contact-a" target="_blank" href="https://www.twitter.com">
-                <i class="fab fa-twitter contact-icon"></i>
-            </a>
-            <a class="contact-a" target="_blank" href="https://www.youtube.com">
-                <i class="fab fa-youtube contact-icon"></i>
-            </a>
-            <a class="contact-a" target="_blank" href="https://www.facebook.com">
-                <i class="fab fa-facebook-f contact-icon"></i>
-            </a>
-
+            <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="chalkboard-teacher" class="svg-inline--fa fa-chalkboard-teacher fa-w-20" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512"><path fill="currentColor" d="M208 352c-2.39 0-4.78.35-7.06 1.09C187.98 357.3 174.35 360 160 360c-14.35 0-27.98-2.7-40.95-6.91-2.28-.74-4.66-1.09-7.05-1.09C49.94 352-.33 402.48 0 464.62.14 490.88 21.73 512 48 512h224c26.27 0 47.86-21.12 48-47.38.33-62.14-49.94-112.62-112-112.62zm-48-32c53.02 0 96-42.98 96-96s-42.98-96-96-96-96 42.98-96 96 42.98 96 96 96zM592 0H208c-26.47 0-48 22.25-48 49.59V96c23.42 0 45.1 6.78 64 17.8V64h352v288h-64v-64H384v64h-76.24c19.1 16.69 33.12 38.73 39.69 64H592c26.47 0 48-22.25 48-49.59V49.59C640 22.25 618.47 0 592 0z"></path></svg>
         </div>
     </div>
     <div class="container-two">
         <div>
+            <div></div>
             <h1>KELVIN OPOKU</h1>
             <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras eget fringilla elit. Phasellus condimentum tincidunt risus. Pellentesque aliquet tellus eu lacus ultrices, ac vestibulum purus malesuada. Aenean interdum, lacus id rutrum hendrerit, lacus est finibus lorem, euismod tincidunt nunc lectus ut odio.
-                    Aliquam luctus augue sed urna convallis consectetur. Curabitur congue iaculis blandit. Vivamus eu facilisis turpis, eu iaculis lorem.
-                    Vivamus a lacinia tortor. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Etiam dapibus quis libero sit amet viverra. Suspendisse ultrices dictum dolor eu efficitur. Phasellus mauris libero, lacinia in tortor non, viverra venenatis mauris.
-                    Nulla facilisi. Suspendisse non neque malesuada, mattis elit nec, tempor nunc.
+                    
             </p>
             <button class="button"> 
                 CONTACT ME
